# f5n

./: .travis.yml  CHANGELOG.md  README.md  build.gradle  keystore.jks.enc  play.p12.enc  publish_release.sh  script-git-version.gradle  secret-keys.tar.enc  server_mobile_connection.drawio  settings.gradle
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
app/: build.gradle
app/src/androidTest/java/com/mobilegenomics/f5n/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/mobilegenomics/genopo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  artic-native-lib.cpp  consensus-native-lib.cpp  interface_artic.h  interface_bcftools.h  interface_bioawk.h  interface_f5c.h  interface_minimap.h  interface_nanopolish.h  interface_samtool.h  methylation-native-lib.cpp  native-lib.cpp  single-tool-native-lib.cpp  tools.h  variant-native-lib.cpp
app/src/main/java/com/mobilegenomics/f5n/: Application.java  Argument.java  ArgumentID.java  ConfirmationActivity.java  Decompress.java  DownloadActivity.java  GUIConfiguration.java  Helper.java  MainActivity.java  NativeCommands.java  PermissionResultCallback.java  PermissionUtils.java  PipelineActivity.java  PipelineComponent.java  PipelineStep.java  Slave.java  SlaveState.java  Step.java  StepActivity.java  TerminalActivity.java  TimeFormat.java
app/src/main/java/com/mobilegenomics/f5n/activity/: ArticPipelineActivity.java  ChoosePipelineActivity.java  ConfirmationActivity.java  DemoActivity.java  DownloadActivity.java  HelpActivity.java  MainActivity.java  MinITActivity.java  PipelineActivity.java  SettingsActivity.java  StepActivity.java  TerminalActivity.java  TutorialActivity.java
app/src/main/java/com/mobilegenomics/f5n/core/: AppMode.java  Argument.java  ArticPipelineArgument.java  ArticPipelineStep.java  MethylationPipelineStep.java  NativeCommands.java  PipelineComponent.java  PipelineStep.java  PipelineType.java  SingleToolPipelineStep.java  Step.java  TimeFormat.java  VariantPipelineStep.java
app/src/main/java/com/mobilegenomics/f5n/dto/: State.java  WrapperObject.java
app/src/main/java/com/mobilegenomics/f5n/fragments/: FragmentHelpAllowSDCard.java  FragmentHelpDemo.java  FragmentHelpDownload.java  FragmentHelpMinIt.java  FragmentHelpMode.java  FragmentHelpRunPipeline.java  FragmentHelpStandalone.java  FragmentSettings.java
app/src/main/java/com/mobilegenomics/f5n/support/: Decompress.java  DownloadListener.java  DownloadManager.java  FTPDownloadManager.java  FTPManager.java  FileUtil.java  JSONFileHelper.java  LogHandler.java  PermissionResultCallback.java  PermissionUtils.java  PipelineState.java  PreferenceUtil.java  ScreenDimUtil.java  ServerCallback.java  ServerConnectionUtils.java  TimeFormat.java  ZipListener.java  ZipManager.java
app/src/main/java/com/mobilegenomics/genopo/: Application.java  GUIConfiguration.java
app/src/main/java/com/mobilegenomics/genopo/activity/: ArticPipelineActivity.java  ChoosePipelineActivity.java  ConfirmationActivity.java  DemoActivity.java  DownloadActivity.java  HelpActivity.java  MainActivity.java  MinITActivity.java  PipelineActivity.java  SettingsActivity.java  StepActivity.java  TerminalActivity.java  TutorialActivity.java
app/src/main/java/com/mobilegenomics/genopo/core/: AppMode.java  Argument.java  ArticPipelineArgument.java  ArticPipelineStep.java  MethylationPipelineStep.java  NativeCommands.java  PipelineComponent.java  PipelineStep.java  PipelineType.java  SingleToolPipelineStep.java  Step.java  (+1 more)
app/src/main/res/drawable/: ic_info_outline_black_24dp.xml  ic_settings_black_24dp.xml  ic_settings_white_24dp.xml
app/src/main/res/layout/: activity_choose_pipeline.xml  activity_main.xml  activity_minit.xml  activity_settings.xml  activity_swipe_tab.xml  layout_list_item.xml  layout_step.xml  layout_vertical.xml  time_preference.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/raw/: argFormat.json  argument_id.txt  artic_arguments.json  artic_auto_generate_arguments.json  bcf_consensus_auto_generate_arguments.json  bcftools_concat_arguments.json  bcftools_consensus_arguments.json  bcftools_index_arguments.json  bcftools_reheader_arguments.json  bcftools_view_arguments.json  f5cCallMethylationArguments.json  f5cEventAlignArguments.json  f5cIndexArguments.json  f5c_call_methylation_arguments.json  f5c_event_align_arguments.json  f5c_index_arguments.json  f5c_meth_freq_arguments.json  minimap2.json  nanopolish_index_arguments.json  nanopolish_variant_arguments.json  samtoolIndexArguments.json  samtool_index_arguments.json  samtool_sort_arguments.json
app/src/main/res/raw/args_json/: samtoolSortArguments.json
app/src/main/res/values/: colors.xml  pipeline_array.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml
app/src/main/resources/lib/arm64-v8a/: wrap.sh
app/src/main/resources/lib/armeabi-v7a/: wrap.sh
app/src/test/java/com/mobilegenomics/f5n/: ExampleUnitTest.java
app/src/test/java/com/mobilegenomics/genopo/: ExampleUnitTest.java
codestyle/: codeStyle.xml
docs/: checklist.txt
gradle/wrapper/: gradle-wrapper.properties
(+25 files in other folders)
